change volume range and show volume level

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="text-center">
     <h1>Loopback</h1>
     <p>Listen to microphone input on speakers</p>
-    <label for="gain">Gain</label>
-    <input id="gain" type="range" min="0.25" max="10.0" step="0.25" value="1" />
+    <label for="gain">Volume: <span id="volume-level"></span></label>
+    <input id="gain" type="range" min="0.0" max="5.0" step="0.1" value="0.5" />
     <p>Created by <a href="http://codef.in/">Jonathan Hunsucker</a>.</p>
 </script>
 <script type="text/html" id="loopback">
